--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "three": "^0.160.0"
   },
   "devDependencies": {
     "serve": "^14.2.1"
   }
-} 
+}
